--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-
-
- *{
+*{
    margin:0;
    padding:0;
    font-family:Century Gothic;
@@ -210,4 +208,4 @@ h4 {
   .column {
     width: 100%;
     display: block;
-  
+  }
