--- a/style.css
+++ b/style.css
@@ -1,211 +1,208 @@
 *{
-   margin:0;
-   padding:0;
-   font-family:Century Gothic;
- }
+  margin:0;
+  padding:0;
+  font-family:Century Gothic;
+}
 
 header
- {
-     background-image: url(../bg.jpg);
-     height: 12vh;
-     background-size:cover;
-     background-positon:center;
- }
+{
+    background-image: url(../bg.jpg);
+    height: 12vh;
+    background-size:cover;
+    background-positon:center;
+}
 ul
- {
-   float:right;
-   list-style-type:none;
-   margin-top:25px;
- }
+{
+  float:right;
+  list-style-type:none;
+  margin-top:25px;
+}
 ul li
- {
-   display:inline-block;  
- }
+{
+  display:inline-block;  
+}
 ul li a
- {
-   margin-top: 7vh;
-   text-decoration:none;
-   color:black;
-   padding: 5px 20px;
-   border: 1px solid transparent;
-   transition: 0.6s ease;
-  } 
+{
+  margin-top: 7vh;
+  text-decoration:none;
+  color:black;
+  padding: 5px 20px;
+  border: 1px solid transparent;
+  transition: 0.6s ease;
+ } 
 ul li a:hover
- {
-   background-color:green;
-   color:black;
-  } 
+{
+  background-color:green;
+  color:black;
+ } 
 .logo img
- {
-    margin-top: 3vh;
-    float:left;
-    width:160px;
-    height:90px;
- }
+{
+   margin-top: 3vh;
+   float:left;
+   width:160px;
+   height:90px;
+}
 .main
- {
-   max-width:1200px;
-   margin:auto;
-  }
+{
+  max-width:1200px;
+  margin:auto;
+ }
 
 .container {
-  position: relative;
-  text-align: center;
-  color: black;
+ position: relative;
+ text-align: center;
+ color: black;
 
 }
 .container img
-  {
-    opacity: 0.8;
-  }
-.centered {
-  border-style: solid;
-  border-width: 10px;
-  position: absolute;
-  font-style: sans-serif;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+ {
+   opacity: 0.8;
+ }
+ #sign{
+   display: none;
+   position: absolute;
+   height: 25px;
+   width: 60px;
+   align-self: auto;
+ }
+#text {
+  display: none;
+ 
+ border-width: 10px;
+ position: absolute;
+ font-style: sans-serif;
+ font-size: medium;
+ top: 50%;
+ left: 50%;
+ transform: translate(-50%, -50%);
+ border: 4px solid black;
 }
 
 .third img
-  {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 900px;
-    height: 400px;
+ {
+   display: block;
+   margin-left: auto;
+   margin-right: auto;
+   width: 900px;
+   height: 400px;
 }
 .lis ul
- {
-  float: right;
- }
+{
+ float: right;
+}
 .list ul li
-  {
-     display:inline-block; 
-     padding: 20px 50px;
-     float: left;
-  }
+ {
+    display:inline-block; 
+    padding: 20px 50px;
+    float: left;
+ }
 .list ul
-  {
-     float: left;
-     margin-left: 320px;
-  }
-
-
-
-.menu1,.menu2
-{
-  text-align: center;
-}
-
-.menup
-{
-    display:inline-block;
-    margin:5px 20px;
-    padding:40px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
+ {
+    float: left;
+    margin-left: 320px;
+ }
 .pictures
-  {
-    border-radius: 50%;
-    float: right;
-         
-  }
+ {
+   border-radius: 50%;
+   float: right;
+        
+ }
 
 .iconDetails
- {
-   margin-left:10%;
-   float:right; 
-   height:100px;
-   width:100px; 
+{
+  margin-left:10%;
+  float:right; 
+  height:100px;
+  width:100px; 
 } 
 
 .container2
- {
-  width:100%;
-  height:auto;
-  padding:10%;
+{
+ width:100%;
+ height:auto;
+ padding:10%;
 }
 
 h4 {
-    margin:0px;
+   margin:0px;
 }
 
 *, *:before, *:after 
 {
-  box-sizing: inherit;
+ box-sizing: inherit;
 }
 
 .column {
-  margin-left: 160px;
-  float: left;
-  width: 33.3%;
-  padding: 0 8px;
+ margin-left: 160px;
+ float: left;
+ width: 33.3%;
+ padding: 0 8px;
 }
 
 .card {
 
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  margin: 8px;
+ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+ margin: 8px;
 }
 
 .about-section {
-  padding: 50px;
-  text-align: center;
-  background-color: #474e5d;
-  color: white;
+ padding: 50px;
+ text-align: center;
+ background-color: #474e5d;
+ color: white;
 }
 
 .container {
-  padding: 0 16px;
+ padding: 0 16px;
 }
 
 .container::after, .row::after
- {
-  content: "";
-  clear: both;
-  display: table;
+{
+ content: "";
+ clear: both;
+ display: table;
 }
 
 .title {
-  color: grey;
+ color: grey;
 }
 
 .buttonc {
-  border: none;
-  outline: 0;
-  display: inline-block;
-  padding: 8px;
-  color: white;
-  background-color: #000;
-  text-align: center;
-  cursor: pointer;
-  width: 100%;
+ border: none;
+ outline: 0;
+ display: inline-block;
+ padding: 8px;
+ color: white;
+ background-color: #000;
+ text-align: center;
+ cursor: pointer;
+ width: 100%;
 }
 
 .buttonc:hover 
 {
-  background-color: #555;
+ background-color: #555;
 }
 
 @media screen and (max-width: 650px) 
 {
-  .column {
-    width: 100%;
-    display: block;
-  }
+ .column {
+   width: 100%;
+   display: block;
+ }
+
+.top .head{
+  text-align: center;
+}
+#crops{
+  padding: 5px;
+  text-align: center;
+  border: solid 1px black;
+  background-color: green;
+  display: none;
+}
+#crops-d{
+  display: none;
+  padding: 80px;
+  display:inline-block;
+}
